# phd-nlp-sentyment-analysis

./: .gitignore  FIX_DEPENDENCIES.md  README.md  bert_approach.ipynb  in_context_learning_approach.ipynb  pyproject.toml  requirements.txt  summary.ipynb  svm_bow.ipynb  svm_embeddings.ipynb
docs/: restaurantes_ativos_recife.csv
nlp-sentiment-analysis/: COMMON_ERRORS.md  README.md  bert_approach.ipynb  scope.md  setup_clean_env.sh  svm_bow.ipynb  svm_embeddings.ipynb
nlp-sentiment-analysis/restaurant_reviews/restaurant_reviews/: items.py  middlewares.py  pipelines.py
nlp-sentiment-analysis/restaurant_reviews/restaurant_reviews/spiders/: reviews.py
restaurant_reviews/: scrapy.cfg
restaurant_reviews/restaurant_reviews/: settings.py
