[project]
name = "nlp-sentiment-analysis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "gensim>=4.4.0",
    "jupyterlab>=4.5.3",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "tqdm>=4.67.2",
    "transformers>=5.0.0",
]
